--- a/firebase.json
+++ b/firebase.json
@@ -7,10 +7,8 @@
         "node_modules",
         ".git",
         "firebase-debug.log",
-        "firebase-debug.*.log"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
+        "firebase-debug.*.log",
+        "*.local"
       ]
     }
   ]
