--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.3.0"
+    "firebase-functions": "^6.3.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
