--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
@@ -17,8 +17,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.3.0",
-    "jsonwebtoken": "^9.0.2"
+    "firebase-functions": "5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
