--- a/functions/package.json
+++ b/functions/package.json
@@ -1,23 +1,24 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "description": "Cloud Functions for Momentum Web App",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+  "serve": "firebase emulators:start --only functions,firestore",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "5.0.1",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
   },
